after refactor and fixing lib/libs issue with new version of android

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="app_name">Live Wallpaper Template</string>
-    <string name="wallpaper_description">Live Wallpaper Template</string>
+    <string name="app_name">Cat Wall Bounce</string>
+    <string name="wallpaper_description">Cat Wall Bounce</string>
     
     
     
